book-nest/src/app.css
*,
*::after,
*::before {
        margin: 0;
        padding: 0;
        box-sizing: border-box;
        -webkit-tap-highlight-color: transparent;
}

a {
        color: inherit;
        text-decoration: none;

        &:hover,
        &:focus {
                color: inherit;
                text-decoration: none;
        }
}

ul,
li {
        list-style: none;
        margin: 0;
        padding: 0;
        text-indent: 0;
        list-style-type: 0;
}

button {
        font-family: "Poppins", sans-serif;
        background-color: transparent;
        border: none;
        cursor: pointer;
        outline: none;
        font-weight: 400;
}

body {
        font-family: "Poppins", sans-serif;
        background-color: #f0eee2;
}

/* TYPOGRAPHY */
h1 {
        font-size: 90px;
        font-family: "EB Garamond", serif;
        line-height: 1.1;
        /* Adjust as needed for spacing */
        font-weight: bold;
}

h2 {
        font-size: 60px;
        font-family: "EB Garamond", serif;
        line-height: 1.2;
        font-weight: bold;
}

h3 {
        font-size: 32px;
        line-height: 1.3;
        font-family: "EB Garamond", serif;
        font-weight: normal;
}

h4 {
        font-family: "Poppins", sans-serif;
        font-size: 24px;
        line-height: 1.3;
        font-weight: normal;
}

p,
li {
        font-size: 20px;
        line-height: 1.4;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
        margin: 0;
}

.small-font {
        font-size: 14px;
}

/* UTILITY CLASSES */
.m-xs {
        margin-top: 8px;
}

.mt-s {
        margin-top: 16px;
}

.mt-m {
        margin-top: 32px;
}

.mt-l {
        margin-top: 64px;
}

.mb-xs {
        margin-bottom: 8px;
}

.mb-s {
        margin-bottom: 16px;
}

.mb-m {
        margin-bottom: 32px;
}

.mb-l {
        margin-bottom: 64px;
}

.bold {
        font-weight: 800;
}

.semi-bold {
        font-weight: 500;
}

.italic {
        font-style: italic;
}

.text-center {
        text-align: center;
}

.default-margin {
        margin: 0px 13vw 0px 13vw;
}

.block {
        display: block;
}

input,
textarea {
        font-family: "Poppins", sans-serif;
        font-size: 20px;
        background-color: rgba(0, 0, 0, 0.035);
        border-radius: 8px;
        padding: 4px 12px;
        outline: none;
        border: none;
        min-height: 48px;
}

textarea {
        height: 120px;
}

textarea::placeholder,
input::placeholder {
        font-size: 20px;
        font-weight: 400;
}

a {
        text-decoration: underline;
}

a:hover {
        text-decoration: underline;
}

